--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.51.1",
     "react-slick": "^0.30.2",
     "shadcn-ui": "^0.8.0",
+    "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
